created base routes for /carts. Updated api contract, added /carts/newcart to create a new cart for a new user. May revert later.
